# fastapi-docker

./: .gitignore  .justfile  Dockerfile  LICENSE  pyproject.toml
src/minimalapp/: app.py  main.py
