[tool.poetry]
name = "minimalapp"
version = "0.1.0"
description = "A base for fastapi"
authors = ["Tobias Newmiwaka"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"

[tool.poetry.scripts]
serve = "minimalapp.main:main"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
